<resources>
    <string name="app_name">W.T.E.</string>
    <string name="appLongName">Where To Eat?</string>
    <string name="logo">Logo</string>

    <string name="titleTextView">Title</string>
    <string name="addressTextView">Address: </string>
    <string name="placeHolderImageView">Image</string>
    <string name="priceTextView">Price: </string>
    <string name="favouriteImageButton">Favourite Button</string>
    <string name="lineImageView">Line</string>

    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="addImageButton">Add Image</string>
    <string name="deleteImageButton">Delete Image</string>
    <string name="callButton">Call</string>

    <string name="avatarImageView">Avatar</string>
    <string name="nameInputEditText">Name</string>
    <string name="addressInputEditText">Address</string>
    <string name="phoneNumberEditText">Phone Number</string>
    <string name="mailInputEditText">E-mail</string>
    <string name="saveButton">Save Changes</string>
</resources>