<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:text="@string/titleTextView"
        app:layout_constraintBottom_toTopOf="@+id/addressTextView"
        app:layout_constraintEnd_toStartOf="@+id/favouriteImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:text="@string/addressTextView"
        app:layout_constraintBottom_toTopOf="@+id/placeHolderImageView"
        app:layout_constraintEnd_toStartOf="@+id/favouriteImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageView
        android:id="@+id/placeHolderImageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mainImageHeight"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:contentDescription="@string/placeHolderImageView"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/priceTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTextView"
        app:srcCompat="@drawable/foodporn" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:text="@string/priceTextView"
        app:layout_constraintBottom_toTopOf="@+id/lineImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeHolderImageView" />

    <ImageButton
        android:id="@+id/favouriteImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:contentDescription="@string/favouriteImageButton"
        app:layout_constraintBottom_toTopOf="@+id/placeHolderImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/favorite_border" />

    <ImageView
        android:id="@+id/lineImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lineImageView"
        android:scaleType="center"
        android:scaleX="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextView"
        app:srcCompat="@drawable/line" />

</androidx.constraintlayout.widget.ConstraintLayout>