<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProfileScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreenFragment">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/mainImageHeight"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:clickable="true"
        android:contentDescription="@string/avatarImageView"
        app:layout_constraintBottom_toTopOf="@+id/addressInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/base_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        app:layout_constraintBottom_toTopOf="@+id/addressInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatarImageView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/addressInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        app:layout_constraintBottom_toTopOf="@+id/mailInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressInputLayout">

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phoneNumberEditText"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        app:layout_constraintBottom_toTopOf="@+id/favouritesRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInputLayout">

        <EditText
            android:id="@+id/mailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/mailInputEditText"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favouritesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailInputLayout" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainMargin"
        android:layout_marginEnd="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favouritesRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>